# Bird-Is-The-Word

./: .gitignore  ColorClassifier.py  Data_Exploration.ipynb  README.md  bwenvbase.yml  bwenvbase2.yml  dfmaker.py  imageviewer.py  learn_model.ipynb  main.py  metric.py  pyproject.toml  testbook copy.ipynb  testbook.ipynb  training_config.yml
output/: general_ocr_002_res.json
src/: BWDatasets.py  dfmaker.py  imageviewer.py  preprocessor.py  train_eval.py  utility.py
