[project]
name = "bird-is-the-word"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "paddlepaddle-gpu==3.1.1",
    "paddleocr>=3.1.1",
    "paddlex==3.1.1",
    "opencv-contrib-python>=4.10.0.84",
    "numpy>=2.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "torchmetrics>=1.3",
    "ipykernel>=6.30.1",
    "opencv-python>=4.12.0.88",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
paddlepaddle-gpu = [{ index = "paddle-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "paddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true
